src/test/scala/wacc/front_end/valid_to_invalid/null.wacc
# null pair assignment# type declaration: lhs and rhs cannot both be an abstract type
# Output:
# #semantic_error#

# Exit:
# 200


begin
  pair(pair, pair) p = null ;
  println p ;
  p = null ;
  println p
end
